--- a/index.html
+++ b/index.html
@@ -1,41 +1,3 @@
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-
-  <script src="//cdn.delight-vr.com/latest/dl8-9e034c8b9e1a60aa0d2bf439b4752c324b001730.js" async></script>
-</head>
-
-<body>
-<!--  <input type="file">-->
-  <div class="container">
-    <input type="file" id="selectedFile" style="display: none;" />
-    <input type="button" id="button" value="Browse..." onclick="document.getElementById('selectedFile').click();" />
-    <dl8-video format="STEREO_180_LR" aspect="16:9">
-      <source type="video/mp4" />
-    </dl8-video>
-  </div>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-</body>
-
-</html>
+<!doctype html><html class="no-js"><head><meta charset="utf-8"><title></title><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1"><meta property="og:title" content=""><meta property="og:type" content=""><meta property="og:url" content=""><meta property="og:image" content=""><link rel="manifest" href="/site.webmanifest"><link rel="apple-touch-icon" href="/icon.878d0521.png"><link rel="stylesheet" href="/normalize.02b6c58e.css"><link rel="stylesheet" href="/main.44aedfe1.css"><meta name="theme-color" content="#fafafa"><script src="//cdn.delight-vr.com/latest/dl8-9e034c8b9e1a60aa0d2bf439b4752c324b001730.js" async></script></head><body>
+ <div class="container"> <input type="file" id="selectedFile" style="display:none;"> <input type="button" id="button" value="Browse..." onclick="document.getElementById('selectedFile').click();"> <dl8-video format="STEREO_180_LR" aspect="16:9"> <source type="video/mp4"> </dl8-video> </div> <script src="/modernizr-3.11.2.min.bbf62f91.js"></script> <script src="/plugins.40a68ed9.js"></script> <script src="/main.56e9f6bb.js"></script>
+</body></html>
